--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,11 +7,12 @@
 body {
 	font-family: arial;
 	font-size: small;
-	background: #eeeee
+	background: white;
 }
 </style>
 </head>
 <body>
+	<a href="https://github.com/PaulaCJordans/EIA2_WiSe22_23" target="_blank">Repository</a>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
