--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,5 +14,6 @@ body {
 <body>
 	<a href="https://github.com/PaulaCJordans/EIA2_WiSe22_23" target="_blank">Repository</a>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	<a href="https://paulacjordans.github.io/EIA2_WiSe22/L01/Lektion01/Zufallsgedicht.html">Link zu  Aufgabe 01</a>
 </body>
 </html>
