Steckbrief und Kommentare

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,6 +15,6 @@ body {
 	<a href="https://github.com/PaulaCJordans/EIA2_WiSe22_23" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="https://paulacjordans.github.io/EIA2_WiSe22/L01/Lektion01/Zufallsgedicht.html" target="_blank">Link zu  Aufgabe 01</a>
+	<a href="https://paulacjordans.github.io/EIA2WISE2223/L01/Lektion01/Zufallsgedicht.html">Zufallsgedicht</a>
 </body>
 </html>
