--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,10 +12,10 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://github.com/PaulaCJordans/EIA2_WiSe22_23" target="_blank">Repository</a>
+	<a href="https://github.com/PaulaCJordans/EIA2WiSe2223" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="https://paulacjordans.github.io/EIA2_WiSe22_23/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht</a>
 	<br>
 </body>
 </html>
