--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,7 +15,7 @@ body {
 	<a href="https://github.com/PaulaCJordans/EIA2WiSe2223" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht 13.10.22</a>
 	<br>
 </body>
 </html>
