--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,7 +16,7 @@ body {
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht 13.10.22</a>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Konzept01.pdf" target="_blank"></a>
+	<a href="https://github.com/PaulaCJordans/EiA2WiSe2223/blob/main/L01/Lektion01/Konzept_01%202.pdf" target="_blank"></a>
 	<br>
 </body>
 </html>
