--- a/L02/Lektion02/eventinsp.html
+++ b/L02/Lektion02/eventinsp.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eventinspector</title>
-    <script src="../L03/eventinsp.js"></script>
-    <link rel="stylesheet" href="../L03/eventinsp.css">
+    <script src="../Lektion02/eventinsp.js"></script>
+    <link rel="stylesheet" href="../Lektion02/eventinsp.css">
 </head>
 <body class="body">
 
     <h1>Events-Exercise</h1>
 
-    <div id="div0"></div>
+    <div id="div0">
+        <button id="button">click</button>
+    </div>
+
     <div id="div1"></div>
 
-    <span></span> <!--ist für css-->
+    <span></span> 
 
 </body>
 </html>
