--- a/L02/Lektion02/eventinsp.html
+++ b/L02/Lektion02/eventinsp.html
@@ -13,7 +13,7 @@
     <h1>Events-Exercise</h1>
 
     <div id="div0">
-        <button id="button">click</button>
+        <button>click</button>
     </div>
 
     <div id="div1"></div>
