--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -18,5 +18,6 @@ body {
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht 13.10.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Konzept_01.pdf" target="_blank">Konzept</a>
 	<br>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L02/Lektion02/eventinsp.html"></a>
 </body>
 </html>
