--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,8 +16,9 @@ body {
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht 13.10.22</a>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Konzept_01.pdf" target="_blank">Konzept</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Konzept_01.pdf" target="_blank">Konzept_01</a>
 	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L02/Lektion02/eventinsp.html" target="_blank">EventInspektor 20.10.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L02/Lektion02/Konzept_02.pdf" target="_blank">Konzept_02</a>
 </body>
 </html>
