--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -20,5 +20,8 @@ body {
 	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L02/Lektion02/eventinsp.html" target="_blank">EventInspektor 20.10.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L02/Lektion02/Konzept_02.pdf" target="_blank">Konzept_02</a>
+	<br>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/shopping.html" target="_blank">Shopping Liste 27.10.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/Konzept_03.pdf" target="_blank">Konzept_03</a>
 </body>
 </html>
