--- a/L04/L04.html
+++ b/L04/L04.html
@@ -4,32 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../L04/L04.js"></script>
-    <title>Shopping Liste</title>
+    <title>shopping list</title>
+    <script src="../L04/04.js"></script>
+    <script src="../L04/data.js"></script>
+    <script src="https://kit.fontawesome.com/4287d81834.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../L04/L04.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
 </head>
+
 <body>
-    <body>
-        <div class="wrapper">
-    
-            <h1>Shopping Liste</h1>
-            <h2 class="text">
-                <span id="counterToDo">0 </span> in Total
-            </h2>
-            <br>
-            <input type="number"placeholder="amount">           
-            <input type="text"id="comment"placeholder="comment">
-            <input type="date"id="datum">
-            <br>
-            <br>
-            <input id="toDo" type="text" placeholder="Erweitere die Liste" required>
-            <div class="toDoWrapper" id="toDoWrapper"></div>
-
-        </div>
+    <form>
+        <div class="container">
+            <h1>shopping list</h1>
+            <h2>add new item</h2>
 
 
-    </body>
-    </html>
+            <fieldset id="fsItem">
+                <input class="item" type="text" name="Item" placeholder="item" required>
+            </fieldset>
+            <fieldset id="fsAmount">
+                <input class="amount" type="number" name="Amount" placeholder="amount" required>
+            </fieldset>
+            <fieldset id="nextBuy">
+                <h3> buy next time? </h3>
+                <input class="nextBuy" type="checkbox" name="Checkbox">
+            </fieldset>
+            <fieldset id="fsComment">
+                <textarea class="comment" name="Area" rows="3" placeholder="comments"></textarea>
+            </fieldset>
+
+
+
+            <div id="output">
+
+            </div>
+            <div id="check">
+
+            </div>
+
+
+    </form>
+
 </body>
+
 </html>
