--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -24,6 +24,6 @@ body {
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/shopping.html" target="_blank">Shopping Liste 29.10.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/Konzept_03.pdf" target="_blank">Konzept_03</a>
 	<br>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/L04.html">Lektion 04 - 04.10.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/L04.html" target="_blank">Lektion 04 - 04.10.22</a>
 </body>
 </html>
