--- a/L04/L04.html
+++ b/L04/L04.html
@@ -25,6 +25,9 @@
             <fieldset id="fsAmount">
                 <input class="amount" type="number" name="Amount" placeholder="amount" required>
             </fieldset>
+            <fieldset id="fsDate">
+                <input class="date" type="date" name="Date" placeholder="date" required>
+            </fieldset>
             <fieldset id="nextBuy">
                 <h3> buy next time? </h3>
                 <input class="nextBuy" type="checkbox" name="Checkbox">
