--- a/L04/L04.html
+++ b/L04/L04.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shopping list</title>
-    <script src="../L04/04.js"></script>
+    <script src="../L04/script.js"></script>
     <script src="../L04/data.js"></script>
     <script src="https://kit.fontawesome.com/4287d81834.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../L04/L04.css">
