--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,15 +15,18 @@ body {
 	<a href="https://github.com/PaulaCJordans/EIA2WiSe2223" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht 13.10.22</a>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Konzept_01.pdf" target="_blank">Konzept_01</a>
+	
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/L04.html" target="_blank">Shopping Liste 04.10.22</a>
+	<a href=""target="_blank">Konzept_04</a>
+	<br>	
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/shopping.html" target="_blank">Shopping Liste 29.10.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/Konzept_03.pdf" target="_blank">Konzept_03</a>
+	<br>
 	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L02/Lektion02/eventinsp.html" target="_blank">EventInspektor 20.10.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L02/Lektion02/Konzept_02.pdf" target="_blank">Konzept_02</a>
 	<br>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/shopping.html" target="_blank">Shopping Liste 29.10.22</a>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/Konzept_03.pdf" target="_blank">Konzept_03</a>
-	<br>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/L04.html" target="_blank">Lektion 04 - 04.10.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Zufallsgedicht.html" target="_blank">Zufallsgedicht 13.10.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L01/Lektion01/Konzept_01.pdf" target="_blank">Konzept_01</a>
 </body>
 </html>
