--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,7 +17,7 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/L04.html" target="_blank">Shopping Liste 04.10.22</a>
-	<a href=""target="_blank">Konzept_04</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/Konzept_04.pdf" target="_blank">Konzept_04</a>
 	<br>	
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/shopping.html" target="_blank">Shopping Liste 29.10.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L03/Konzept_03.pdf" target="_blank">Konzept_03</a>
