--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,6 +16,8 @@ body {
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L05/L05.html" target="_blank">Shopping Liste 12.11.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L05/Konzept_05.pdf">Konzept_05</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/L04.html" target="_blank">Shopping Liste 04.10.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L04/Konzept_04.pdf" target="_blank">Konzept_04</a>
 	<br>	
