--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,7 +16,7 @@ body {
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L06/shoppingList.html" target="_blank">Shopping Liste 19.11.22</a>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L06/Konzept_06.pdf">Konzept_06</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L06/Konzept_06.pdf" target="_blank">Konzept_06</a>
 	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L05/L05.html" target="_blank">Shopping Liste 12.11.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L05/Konzept_05.pdf" target="_blank">Konzept_05</a>
