--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,7 +15,9 @@ body {
 	<a href="https://github.com/PaulaCJordans/EIA2WiSe2223" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L08/Lektion08.html" target="_blank">Vogelhaus 03.12.22</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/" target="_blank">Konzept_08.2</a>
+	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L08/Lektion08.html" target="_blank">Generative Kunst 25.11.22</a>
 	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L06/shoppingList.html" target="_blank">Shopping Liste 19.11.22</a>
