--- a/L08.2/vogelhaus.html
+++ b/L08.2/vogelhaus.html
@@ -12,6 +12,6 @@
     <header>
         <h1>Vogelhaus</h1>
     </header>
-    <canvas></canvas>
+    <canvas height="700" width="1500"></canvas>
 </body>
 </html>
