--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,6 +15,9 @@ body {
 	<a href="https://github.com/PaulaCJordans/EIA2WiSe2223" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L09.1/lektion09_1.html" target="_blank">OldMacDonaldsFarm</a>
+	<a href="" target="_blank">Konzept_09.1</a>
+	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L08.2/vogelhaus.html" target="_blank">Vogelhaus 03.12.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L08.2/Konzept_08.2.pdf" target="_blank">Konzept_08.2</a>
 	<br>
