--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,7 +16,7 @@ body {
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L09.1/lektion09_1.html" target="_blank">OldMacDonaldsFarm</a>
-	<a href="" target="_blank">Konzept_09.1</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L09.1/Konzept_09.1.pdf" target="_blank">Konzept_09.1</a>
 	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L08.2/vogelhaus.html" target="_blank">Vogelhaus 03.12.22</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L08.2/Konzept_08.2.pdf" target="_blank">Konzept_08.2</a>
