--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,6 +15,10 @@ body {
 	<a href="https://github.com/PaulaCJordans/EIA2WiSe2223" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L09.2/09_2.html" target="_blank">Vogelhaus Classes</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L09.2/Konzept_09.2.pdf" target="_blank">Konzept_09.2</a>
+	<br>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L09.1/lektion09_1.html" target="_blank">OldMacDonaldsFarm</a>
 	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/L09.1/Konzept_09.1.pdf" target="_blank">Konzept_09.1</a>
 	<br>
