--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,9 +15,9 @@ body {
 	<a href="https://github.com/PaulaCJordans/EIA2WiSe2223" target="_blank">Repository</a>
 	<br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/Feuerwerk/index.html">Endabgabe Feuerwerk, 11.2.2023</a>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/Feuerwerk/Feuerwerk_Konzept.pdf">Konzept Feuerwerk</a>
-	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/Feuerwerk/Anleitung_PaulaJordans.pdf">Anleitungen</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/Feuerwerk/index.html" target="_blank">Endabgabe Feuerwerk, 11.2.2023</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/Feuerwerk/Feuerwerk_Konzept.pdf" target="blank">Konzept Feuerwerk</a>
+	<a href="https://PaulaCJordans.github.io/EiA2WiSe2223/Feuerwerk/Anleitung_PaulaJordans.pdf" target="blank">Anleitungen</a>
 	<br>
 	<br>
 	<br>
